# alpha-finder-v2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/cost_models/: base_a_share_cash.toml  high_a_share_cash.toml
config/decay_monitors/: a_share_core_watch.toml
config/descriptor_sets/: earnings_drift_core.toml  fundamental_rerating_core.toml  trend_leadership_core.toml  trend_leadership_core_residual.toml  trend_resilience_core.toml
config/descriptors/: accrual_quality.toml  estimate_revision_breadth.toml  industry_relative_strength.toml  leverage_conservatism.toml  medium_term_relative_strength.toml  post_earnings_drift_signal.toml  profitability_quality.toml  sector_relative_valuation.toml  trend_stability.toml  turnover_confirmation.toml
config/execution_policies/: a_share_next_open_v1.toml
config/mandates/: a_share_long_only_eod.toml
research/: README.md
tests/: test_benchmark_state_builder.py  test_config_loader.py  test_deployment.py  test_fundamental_research_input_builder.py  test_live_readiness.py  test_market_data_bootstrap.py  test_portfolio_constructor.py  test_portfolio_simulator.py  test_promotion_gate_evaluator.py  test_promotion_replay.py  test_reference_data_staging.py  test_regime_overlay.py  test_regime_overlay_observation_builder.py  test_research_artifact_builder.py  test_research_artifact_loader.py  test_research_evaluator.py  test_residual_snapshot_required_coverage_builder.py  test_risk_model.py  test_sw_industry_pit_audit.py  test_target_builder.py  test_target_risk_integration.py  test_trend_research_input_builder.py
(+146 files in other folders)
