[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-find-v2"
version = "0.1.0"
description = "Finance-first A-share personal quant system bootstrap"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
alpha-find-v2 = "alpha_find_v2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
